--- a/spectrogram.ipynb
+++ b/spectrogram.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "spectrogram.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPo+YebUMrHGnzSqQDeZrmq",
+      "authorship_tag": "ABX9TyMjTHJkhk3pUq4iNxdFWINQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,10 +122,10 @@
         "    //bitsPerSecond: 8000, //chrome seems to ignore, always 48k\n",
         "    mimeType : 'audio/webm;codecs=opus'\n",
         "    //mimeType : 'audio/webm;codecs=pcm'\n",
-        "  };            \n",
+        "  };\n",
         "  //recorder = new MediaRecorder(stream, options);\n",
         "  recorder = new MediaRecorder(stream);\n",
-        "  recorder.ondataavailable = function(e) {            \n",
+        "  recorder.ondataavailable = function(e) {\n",
         "    var url = URL.createObjectURL(e.data);\n",
         "    var preview = document.createElement('audio');\n",
         "    preview.controls = true;\n",
@@ -133,7 +133,7 @@
         "    document.body.appendChild(preview);\n",
         "\n",
         "    reader = new FileReader();\n",
-        "    reader.readAsDataURL(e.data); \n",
+        "    reader.readAsDataURL(e.data);\n",
         "    reader.onloadend = function() {\n",
         "      base64data = reader.result;\n",
         "      //console.log(\"Inside FileReader:\" + base64data);\n",
@@ -175,7 +175,7 @@
         "\n",
         "}\n",
         "});\n",
-        "      \n",
+        "\n",
         "</script>\n",
         "\"\"\"\n",
         "\n",
@@ -183,14 +183,14 @@
         "  display(HTML(AUDIO_HTML))\n",
         "  data = eval_js(\"data\")\n",
         "  binary = b64decode(data.split(',')[1])\n",
-        "  \n",
+        "\n",
         "  process = (ffmpeg\n",
         "    .input('pipe:0')\n",
         "    .output('pipe:1', format='wav')\n",
         "    .run_async(pipe_stdin=True, pipe_stdout=True, pipe_stderr=True, quiet=True, overwrite_output=True)\n",
         "  )\n",
         "  output, err = process.communicate(input=binary)\n",
-        "  \n",
+        "\n",
         "  riff_chunk_size = len(output) - 8\n",
         "  # Break up the chunk size into four bytes, held in b.\n",
         "  q = riff_chunk_size\n",
@@ -209,13 +209,13 @@
       "metadata": {
         "id": "YkOFunV_2hA1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "##Record sound, listen and tore to file \"sound.wav\":"
+        "##Record sound, listen and store to file \"sound.wav\":"
       ],
       "metadata": {
         "id": "F46pDOdJ3mhf"
@@ -236,7 +236,7 @@
           "height": 114
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -343,7 +343,7 @@
         "\n",
         "Load the audio signal for the spectrogram using the \"Files\" panel on the left, then copy its path into the text field argument below, and run that cell. Verify by listening to its mono version by clicking on the playback button below.\n",
         "\n",
-        "Then in the \"Spectrogram\" cell you can change the FFT lenght of the Short Time Fourier Transfrom (STFT) for the spectrogram, and the number of times the STFT windows overlap, if desired. Then run the cell. The spectrogram has \"hover\", zoom, and \"save\" tools. "
+        "Then in the \"Spectrogram\" cell you can change the FFT lenght of the Short Time Fourier Transfrom (STFT) for the spectrogram, and the number of times the STFT windows overlap, if desired. Then run the cell. The spectrogram has \"hover\", zoom, and \"save\" tools."
       ],
       "metadata": {
         "id": "8Ekxiq9qQTNN"
@@ -352,7 +352,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import scipy.io.wavfile as wav \n",
+        "import scipy.io.wavfile as wav\n",
         "import numpy as np\n",
         "from IPython.display import Audio, display\n",
         "\n",
@@ -382,7 +382,7 @@
         "id": "kkcVp77fQZ4a",
         "outputId": "3df471ae-ca2a-4dfc-cbd9-99c78754e530"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,14 +433,14 @@
         "\n",
         "fftlen= \"2048\" #@param [256,2048, 8192]\n",
         "fftlen=int(fftlen)\n",
-        "timesoverlap= \"2\" #@param [2, 4, 8, 16 ] \n",
+        "timesoverlap= \"2\" #@param [2, 4, 8, 16 ]\n",
         "#This many timer are the windows overlapped\n",
         "timesoverlap=int(timesoverlap)\n",
         "\n",
         "noverlap=fftlen -fftlen//timesoverlap\n",
         "\n",
         "for chan in range(channels):\n",
-        "  freq,t,y = signal.stft(snd[:,chan],fs=rate, nperseg=fftlen, noverlap = noverlap) \n",
+        "  freq,t,y = signal.stft(snd[:,chan],fs=rate, nperseg=fftlen, noverlap = noverlap)\n",
         "  magdb=20*np.log10(np.abs(y)+1e-6) #Values in dB\n",
         "\n",
         "  print(\"max(magdb)=\",np.max(magdb), \"min(magdb)=\", np.min(magdb), \"magdb.shape=\",magdb.shape )\n",
@@ -461,7 +461,7 @@
         "outputId": "128fe581-87e5-4c38-9c0c-42a1a452d3e4",
         "cellView": "form"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
